add filters for project
