# backend/src/main/java/ru/shtamov/backendlk2/extern/dto/FilterDto.java
@@ -1,0 +1,7 @@
+package ru.shtamov.backendlk2.extern.dto;
+
+public record FilterDto(
+        Long id,
+        String name
+) {
+}
