# backend/src/main/java/ru/shtamov/backendlk2/extern/dto/ProjectFiltersDto.java
@@ -1,0 +1,9 @@
+package ru.shtamov.backendlk2.extern.dto;
+
+import java.util.List;
+
+public record ProjectFiltersDto(
+        List<FilterDto> events,
+        List<FilterDto> directions
+) {
+}
